[package]
name = "nebula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.12", features = [
  "framework",
  "standard_framework",
  "rustls_backend",
] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
] }
poise = { git = "https://github.com/serenity-rs/poise" }
tokio = { version = "1.21.2", features = ["full"] }


[profile.release]
opt-level = 3
